# bebzun-llm

./: .gitignore  LICENSE  MANIFEST.in  build_knowledge.py  chat.py  cli.py  pyproject.toml  readme.md  requirements.txt  setup.py  static_analysis.py
bebzun_llm/: __init__.py  __version__.py  build_knowledge.py  chat.py  cli.py
bebzun_llm/core/: __init__.py
bebzun_llm/core/config/: __init__.py  config.py
bebzun_llm/core/context/: build_context.py  build_context_result.py
bebzun_llm/core/llm/: llm_execution_mlx.py  llm_execution_ollama.py  llm_execution_openai.py  prepare_prompts.py
bebzun_llm/core/search/: reranker.py  reranker_execution_llama.py  reranker_execution_transformers.py  search.py  search_result.py
bebzun_llm/core/utils/: file_manager.py  file_utils.py  token_utils.py
bebzun_llm/interact/: __init__.py  chat_state.py
bebzun_llm/interact/chat/: system_prompt.txt
bebzun_llm/interact/memory/: memory.py
bebzun_llm/interact/tools/: final_answer_tool.py  finish_step_tool.py  list_files_tool.py  (+2 more)
bebzun_llm/knowledge/: embeddings_store.py  knowledge_store.py  model.py
core/config/: config.py
core/context/: build_context.py  build_context_result.py
core/llm/: llm_execution_anthropic.py  llm_execution_mlx.py  llm_execution_ollama.py  llm_execution_openai.py  prepare_prompts.py
core/search/: embedding_entry.py  reranker.py  reranker_execution_llama.py  search.py  search_result.py
core/utils/: file_manager.py  file_utils.py  logging_utils.py  token_utils.py
examples/: config.json  config_mlx.json  config_ollama.json
interact/: chat_state.py
interact/chat/: system_prompt.txt
interact/memory/: memory.py
interact/tools/: final_answer_tool.py  finish_step_tool.py  get_file_content_tool.py  list_files_tool.py  search_knowledge_tool.py
knowledge/: embeddings.py  embeddings_store.py  knowledge_store.py  model.py
knowledge/embeddings/: embedding_execution.py  embedding_execution_mlx.py  embedding_execution_ollama.py  embedding_execution_openai.py
knowledge/prompts/: final_proccess_prompt.txt  system_prompt.txt
static_analysis/: __init__.py
static_analysis/core/: analyzer.py  output_formatter.py
static_analysis/model/: model.py
static_analysis/parsers/: base_parser.py  java_parser.py  kotlin_parser.py
static_analysis/tests/: test_java_parser.py  test_kotlin_parser.py
(+37 files in other folders)
